# jellyfin-desktop

./: CLAUDE.md  CMakeLists.txt
dev/: hdr_compare.sh  hdr_test.cpp  resize_test.cpp
docs/: mpv-gpu-next-hdr-rendering.md
src/: main.cpp
src/platform/: dcomp_browser_layer.h  macos_layer.h  macos_layer.mm  wayland_subsurface.cpp  wayland_subsurface.h  windows_dcomp_context.cpp  windows_dcomp_context.h  windows_dxgi_util.h  windows_video_layer.cpp  windows_video_layer.h  windows_video_surface.cpp  windows_video_surface.h
src/player/: video_stack.cpp  video_stack.h  vulkan_subsurface_renderer.cpp  vulkan_subsurface_renderer.h
src/player/mpv/: mpv_player.cpp  mpv_player.h
